# blink-monitor

./: .gitignore  Makefile  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  blink.c  component.mk  macros.h  monitor.c  monitor.h  procesador_petri.c  procesador_petri.h
main/certs/: README.md  cacert.pem  prvtkey.pem  san.cnf
main/devices/: boton_device.c  boton_device.h  cam.c  cam.h  cerradura_device.c  cerradura_device.h  comm_dev.c  comm_dev.h  device.c  device.h  gpio_device.c  gpio_device.h  mqtt.c  mqtt.h  mqtt_device.c  mqtt_device.h
main/manejador_eventos/: boton_handler.c  boton_handler.h  handler.c  handler.h  manejador_eventos.c  manejador_eventos.h  movimiento_handler.c  movimiento_handler.h  mqtt_handler.c  mqtt_handler.h  rfid_handler.c  rfid_handler.h
main/software/: software.c  software.h
main/streaming/: streaming.c  streaming.h
redes-de-petri/: 20230319-definitivo.xml  control-de-acceso-marcado-mico.csv  control-de-acceso-mico.csv  ctrl_acceso_220612.xml  huang.xml  incidencia-ultima.csv  marcado-ultima.csv  ultimaversion_20220921.xml  ultimaversion_20221024.xml
testing/: test_mqtt.py
